--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="styles">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Weather App</h1>
-    <p>Please enter your city</p>
+    <form class="weatherForm"> 
+        <input type="text" class="cityInput" placeholder="Enter city">
+        <button type="submit">Get Weather</button>
+    </form>
+    <div class="card">
+        <h1 class="cityDisplay">Biñan</h1>
+        <p class="tempDisplay">30°C</p>
+        <p class="humidityDisplay">30%</p>
+        <p class="descDisplay">Sunny</p>
+        <p class="weatherEmoji">⛅</p>
+        <p class="errorDisplay">Please enter a city</p>
+    </div>
+    <script src="index.js"></script>
 </html>
